[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qck-sdk"
version = "0.1.0"
description = "Official Python SDK for the QCK API"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qck"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
